# spot-gpu-lotto

./: .bedrock_agentcore.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  _api_server_legacy.py  docker-compose.test.yml  docker-compose.yml  openapi-gateway.json  openapi.json  pyproject.toml  requirements-agent.txt  requirements.txt  setup-clusters.sh  setup-storage.sh
.claude/: settings.json
.claude/agents/: code-reviewer.yml  security-auditor.yml
.claude/commands/: deploy.md  review.md  test-all.md
.claude/hooks/: check-doc-sync.sh  notify.sh  secret-scan.sh  session-context.sh
.harness-eval/: history.json  latest.json
.kiro/: AGENT.md  rules.md  steering.md
.kiro/agents/: code-reviewer.json  security-auditor.json
.kiro/docs/: architecture.md  development.md  modules.md  product-context.md  tech-stack.md
demos/: CLAUDE.md  launcher.sh  scenario1-cost-optimized.sh  scenario2-spot-recovery.sh  scenario3-full-lifecycle.sh  scenario4-ai-agent.sh  watch-gpu-pods.sh
docs/: api-reference.md  onboarding.md
docs/decisions/: .template.md  (+2 more)
frontend/: CLAUDE.md  Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  (+2 more)
helm/: monitoring-values-dev.yaml
k8s/: CLAUDE.md  fsx-lustre-pv.yaml  grafana-targetgroupbinding.yaml  karpenter-gpu-spot.yaml  s3-mountpoint-pv.yaml
scripts/: install-hooks.sh  setup.sh  smoke-test.sh  test_agent_local.py
terraform/: CLAUDE.md
tests/: run-all.sh
(+191 files in other folders)
